--- a/ivy.xml
+++ b/ivy.xml
@@ -4,7 +4,7 @@
             xmlns:m="http://ant.apache.org/ivy/maven">
 
 	<!-- Name der Organisation und des Moduls -->
-	<info organisation="org.timadorus" module="webapp" />
+	<info organisation="org.timadorus" module="webapp" revision="0.1"/>
     
     <configurations>
     	<conf name="compile"  visibility="private"/>
@@ -21,6 +21,10 @@
 		<dependency org="com.google.gwt" name="gwt-user" rev="2.4.0" />
 		<dependency org="com.google.gwt" name="gwt-dev" rev="2.4.0" />
 		<dependency org="com.google.gwt" name="gwt-servlet" rev="2.4.0" />
+		<dependency org="javax.validation" name="validation-api" rev="1.0.0.GA" conf="runtime->*">
+        	<artifact name="validation-api" type="jar"/>
+        </dependency>
+		
 
 		<!-- DataNucleus -->
 		<dependency org="org.datanucleus" name="datanucleus-enhancer" rev="3.0.1" conf="compile->default" />
@@ -35,11 +39,17 @@
 		<!-- handling mail -->
         <dependency org="org.apache.commons" name="commons-email" rev="1.2" conf="*->default"/>
 		
-		<!-- JUnit -->
-		<dependency org="junit" name="junit" rev="3.8.2" conf="testing->default"/>
+		<!-- testing: JUnit, emma  -->
+		<dependency org="junit" name="junit" rev="4.8.2" conf="testing->default"/>
+		<dependency org="emma" name="emma_ant" rev="2.1.5320"  conf="testing->default"/>
+        <dependency org="emma" name="emma" rev="2.1.5320"  conf="testing->default"/>
+		
+		<!-- JDO -->
+		<dependency org="javax.jdo" name="jdo-api" rev="3.0" conf="compile->default"/>
+
 		
 		<!-- Checkstyle -->
-		<dependency org="checkstyle" name="checkstyle" rev="5.1" conf="testing->runtime" />
+		<dependency org="com.puppycrawl.tools" name="checkstyle" rev="5.4" conf="testing->default" />
 		
 		<!-- Selenium -->
 		<dependency org="org.seleniumhq.selenium" name="selenium-server" rev="2.0b3" conf ="testing->default" />
@@ -51,8 +61,6 @@
 		<!-- SVNKit -->
 		<dependency org="org.tmatesoft.svnkit" name="svnkit" rev="1.3.5" conf="compile->default"/>
 		
-		<!-- JDO -->
-		<dependency org="javax.jdo" name="jdo-api" rev="3.0" conf="compile->default"/>
 		
 	</dependencies>
 </ivy-module>
