Added RPC Command Pattern for the registration Service. Removed old server communication. Implemented service classes can be used to provide command pattern service for other requests.
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@2216 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -33,7 +33,7 @@
   
   <servlet>
     <servlet-name>register</servlet-name>
-    <servlet-class>org.timadorus.webapp.server.rpc.service.RegisterServiceImpl</servlet-class>
+    <servlet-class>org.timadorus.webapp.server.rpc.service.ServiceImpl</servlet-class>
   </servlet>
  
   <servlet-mapping>
