added mockito to classpath
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@2257 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,6 @@
 	<classpathentry kind="lib" path="lib/runtime/datanucleus-api-jdo-3.0.7.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/datanucleus-rdbms-3.0.8.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/datanucleus-core-3.0.10.jar"/>
+	<classpathentry kind="lib" path="lib/testing/mockito-all-1.9.0.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
