Refactored SelectTempStatPanel to fit mpv pattern.
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@2295 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/build.xml
+++ b/build.xml
@@ -318,7 +318,11 @@
 
 			<!-- path to files that are to be considered for enhancement -->
 			<fileset dir="${war.classes}">
-				<include name="**/*.class" />
+				<include name="**/User.class" />
+				<include name="**/Character.class" />
+				<include name="**/Faction.class" />
+				<include name="**/Race.class" />
+				<include name="**/CClass.class" />
 			</fileset>
 		</datanucleusenhancer>
 	</target>
