Moved all classes which use persistence annotations to the beans package. Changed the path of the datanucleus enhanced files to the beans folder in the build.xml and project properties. Now there should be no build error of too long parameter values.
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@2296 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/.settings/com.google.appengine.eclipse.core.prefs
+++ b/.settings/com.google.appengine.eclipse.core.prefs
@@ -3,3 +3,4 @@ filesCopiedToWebInfLib=appengine-api-1.0-sdk-1.6.4.jar|appengine-api-labs-1.6.4.
 gaeIsEclipseDefaultInstPath=false
 googleCloudSqlEnabled=false
 localDevMySqlEnabled=true
+ormEnhancementInclusions=src/org/timadorus/webapp/beans/
