--- a/build.xml
+++ b/build.xml
@@ -318,11 +318,11 @@
 
 			<!-- path to files that are to be considered for enhancement -->
 			<fileset dir="${war.classes}">
-				<include name="**/User.class" />
-				<include name="**/Character.class" />
+				<include name="org/timadorus/webapp/beans/**" />
+				<!--include name="**/Character.class" />
 				<include name="**/Faction.class" />
 				<include name="**/Race.class" />
-				<include name="**/CClass.class" />
+				<include name="**/CClass.class" /-->
 			</fileset>
 		</datanucleusenhancer>
 	</target>
