--- a/build.xml
+++ b/build.xml
@@ -332,7 +332,7 @@
 	<target name="gwt-compile">
 
 		<!-- run compilation macro -->
-		<gwtCompile module="org.timadorus.webapp.TimadorusWebApp" classpathref="TimadorusWebApp.classpath" />
+		<gwtCompile module="org.timadorus.webapp.TimadorusWebApp" classpathref="TimadorusWebApp.classpath"/>
 	</target>
 
 	<!-- Makro:gwtCompile | create macro for creating  -->
@@ -346,7 +346,7 @@
 		<sequential>
 
 			<!-- run gwt compiler for supplied entry point -->
-			<java classpathref="@{classpathref}" classname="com.google.gwt.dev.Compiler" fork="true">
+			<java classpathref="@{classpathref}" classname="com.google.gwt.dev.Compiler" fork="true" failonerror="true">
 				<arg value="@{module}" />
 			</java>
 		</sequential>
