added missed persistence file (org/timadorus/webapp/server/Configuration.class) to build.xml and project properties
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@2305 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/build.xml
+++ b/build.xml
@@ -319,6 +319,8 @@
 			<!-- path to files that are to be considered for enhancement -->
 			<fileset dir="${war.classes}">
 				<include name="org/timadorus/webapp/beans/**" />
+				<include name="org/timadorus/webapp/server/Configuration.class" />
+				
 				<!--include name="**/Character.class" />
 				<include name="**/Faction.class" />
 				<include name="**/Race.class" />
