--- a/.settings/com.google.appengine.eclipse.core.prefs
+++ b/.settings/com.google.appengine.eclipse.core.prefs
@@ -3,4 +3,4 @@ filesCopiedToWebInfLib=appengine-api-1.0-sdk-1.6.4.jar|appengine-api-labs-1.6.4.
 gaeIsEclipseDefaultInstPath=false
 googleCloudSqlEnabled=false
 localDevMySqlEnabled=true
-ormEnhancementInclusions=src/org/timadorus/webapp/beans/
+ormEnhancementInclusions=src/org/timadorus/webapp/beans/|src/org/timadorus/webapp/server/Configuration.java
