--- a/.classpath
+++ b/.classpath
@@ -7,10 +7,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="test-src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_29"/>
-	<classpathentry kind="lib" path="static_lib/selenium-java-client-driver.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/commons-email-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/testing/selenium-server-2.0b3.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/derby-10.6.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/compile/datanucleus-enhancer-3.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/compile/asm-3.3.1.jar"/>
@@ -18,23 +15,14 @@
 	<classpathentry kind="lib" path="lib/runtime/bookkeeper-0.1.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/jdo-api-3.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/gwt-user-2.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/runtime/datanucleus-api-jdo-3.0.7.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/datanucleus-rdbms-3.0.8.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/datanucleus-core-3.0.10.jar"/>
 	<classpathentry kind="lib" path="lib/testing/mockito-all-1.9.0.jar"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER/GWT"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/App Engine"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse_timadorus/plugins/com.google.gwt.eclipse.sdkbundle_2.4.0.v201203300216-rel-r37/gwt-2.4.0/gwt-user.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/C:/Program%20Files/eclipse_timadorus/plugins/com.google.gwt.eclipse.sdkbundle_2.4.0.v201203300216-rel-r37/gwt-2.4.0/doc/javadoc/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse_timadorus/plugins/com.google.gwt.eclipse.sdkbundle_2.4.0.v201203300216-rel-r37/gwt-2.4.0/gwt-dev.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/C:/Program%20Files/eclipse_timadorus/plugins/com.google.gwt.eclipse.sdkbundle_2.4.0.v201203300216-rel-r37/gwt-2.4.0/doc/javadoc/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse_timadorus/plugins/com.google.gwt.eclipse.sdkbundle_2.4.0.v201203300216-rel-r37/gwt-2.4.0/validation-api-1.0.0.GA-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse_timadorus/plugins/com.google.gwt.eclipse.sdkbundle_2.4.0.v201203300216-rel-r37/gwt-2.4.0/validation-api-1.0.0.GA.jar" sourcepath="C:/Program Files/eclipse_timadorus/plugins/com.google.gwt.eclipse.sdkbundle_2.4.0.v201203300216-rel-r37/gwt-2.4.0/validation-api-1.0.0.GA-sources.jar"/>
+	<classpathentry kind="lib" path="lib/compile/datanucleus-api-jdo-3.1.0-m1.jar"/>
+	<classpathentry kind="lib" path="lib/testing/selenium-java-2.21.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/testing/selenium-server-2.21.0.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
