defined a target for automatic selenium-tests which is not yet integrated into to build because of the needed server
defined an abstract selenium test

git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@2318 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,8 @@
 	<classpathentry kind="lib" path="lib/testing/selenium-java-2.21.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/testing/selenium-server-2.21.0.jar"/>
+	<classpathentry kind="lib" path="lib/testing/selenium-api-2.21.0.jar"/>
+	<classpathentry kind="lib" path="lib/testing/selenium-remote-driver-2.21.0.jar"/>
+	<classpathentry kind="lib" path="lib/testing/guava-11.0.1.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
