--- a/build.xml
+++ b/build.xml
@@ -506,5 +506,8 @@
 	</target>
 
 	<!-- Target:build | define the order of the targets run to fullfill the build -->
-	<target name="build" depends="resolve,test-checkstyle,enhance,gwt-compile,test-java,embeddedServer" />
+	<target name="build" depends="resolve,test-checkstyle,enhance,gwt-compile,test-java" />
+	<!-- Old build with embeddedServer:
+	<target name="build" depends="resolve,test-checkstyle,enhance,gwt-compile,test-java,embeddedServer" /> 
+	-->
 </project>
