--- a/test-src/selenium.properties
+++ b/test-src/selenium.properties
@@ -1,10 +1,10 @@
-Selenium.WebApp.Host=127.0.0.1
-Selenium.WebApp.Port=8888
-Selenium.WebApp.RootServer=http://127.0.0.1:8888
+Selenium.WebApp.Host=timadorus-staging.informatik.haw-hamburg.de:8080
+Selenium.WebApp.Port=8080
+Selenium.WebApp.RootServer=timadorus-staging.informatik.haw-hamburg.de:8080/td/
 Selenium.WebApp.RootSite=TimadorusWebApp.html
 Selenium.WebApp.Root=${Selenium.WebApp.RootServer}/${Selenium.WebApp.RootSite}
-Selenium.GridServer.Host=127.0.0.1
+Selenium.GridServer.Host=timadorus-sel-worker-ubuntu.informatik.haw-hamburg.de
 Selenium.GridServer.Port=4444
-Selenium.GridNode.Host=127.0.0.1
+Selenium.GridNode.Host=timadorus-sel-worker-ubuntu.informatik.haw-hamburg.de
 Selenium.GridNode.Port=5555
 Selenium.Browser=*googlechrome
