And another try to run acceptance-tests
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@2347 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/test-src/selenium.properties
+++ b/test-src/selenium.properties
@@ -1,6 +1,6 @@
 Selenium.WebApp.Host=timadorus-staging.informatik.haw-hamburg.de
 Selenium.WebApp.Port=8080
-Selenium.WebApp.RootServer=timadorus-staging.informatik.haw-hamburg.de:8080/td
+Selenium.WebApp.RootServer=http://timadorus-staging.informatik.haw-hamburg.de:8080/td
 Selenium.WebApp.RootSite=TimadorusWebApp.html
 Selenium.WebApp.Root=${Selenium.WebApp.RootServer}/${Selenium.WebApp.RootSite}
 Selenium.GridServer.Host=timadorus-sel-worker-ubuntu.informatik.haw-hamburg.de
