Last try for acceptance - added path to chromium
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@2349 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/test-src/selenium.properties
+++ b/test-src/selenium.properties
@@ -7,4 +7,4 @@ Selenium.GridServer.Host=timadorus-sel-worker-ubuntu.informatik.haw-hamburg.de
 Selenium.GridServer.Port=4444
 Selenium.GridNode.Host=timadorus-sel-worker-ubuntu.informatik.haw-hamburg.de
 Selenium.GridNode.Port=5555
-Selenium.Browser=*googlechrome
+Selenium.Browser=*googlechrome /usr/bin/chromium-browser
