changes on build.xml for getting war-file for deployment
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@2366 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/build.xml
+++ b/build.xml
@@ -479,7 +479,7 @@
 	    
 	    <!-- Copy files from war.dir to tmpServer.dir -->
 	    <copy todir="${tmpServer.dir}">
-	        <fileset dir="war.dir"></fileset>
+	        <fileset dir="${war.dir}"></fileset>
 	    </copy>
 		
 		<!-- build the server .war -->
