--- a/test-src/selenium.properties
+++ b/test-src/selenium.properties
@@ -1,8 +1,8 @@
 Selenium.WebApp.Host=timadorus-staging.informatik.haw-hamburg.de
 Selenium.WebApp.Port=8080
-Selenium.WebApp.RootServer=http://timadorus-staging.informatik.haw-hamburg.de:8080/td
+Selenium.WebApp.RootServer=http://timadorus-staging.informatik.haw-hamburg.de:8080/td/
 Selenium.WebApp.RootSite=TimadorusWebApp.html
-Selenium.WebApp.Root=${Selenium.WebApp.RootServer}/${Selenium.WebApp.RootSite}
+Selenium.WebApp.Root=${Selenium.WebApp.RootServer}${Selenium.WebApp.RootSite}
 Selenium.GridServer.Host=timadorus-sel-worker-ubuntu.informatik.haw-hamburg.de
 Selenium.GridServer.Port=4444
 Selenium.GridNode.Host=timadorus-sel-worker-ubuntu.informatik.haw-hamburg.de
