fix revision specific dependency on bookkeeper
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@2384 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/ivy.xml
+++ b/ivy.xml
@@ -15,7 +15,7 @@
 	<dependencies>
 
 		<!--  other Timadorus parts -->
-		<dependency org="de.harper-hall" name="bookkeeper" rev="0.1" />
+		<dependency org="de.harper-hall" name="bookkeeper" rev="0.1+" />
 
 		<!-- GWT -->
 		<dependency org="com.google.gwt" name="gwt-user" rev="2.4.0" />
