--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,9 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="test-src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_31"/>
 	<classpathentry kind="lib" path="lib/runtime/commons-email-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/testing/selenium-server-2.0b3.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/derby-10.6.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/compile/datanucleus-enhancer-3.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/compile/asm-3.3.1.jar"/>
@@ -15,17 +17,14 @@
 	<classpathentry kind="lib" path="lib/runtime/bookkeeper-0.1.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/jdo-api-3.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/gwt-user-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/runtime/datanucleus-api-jdo-3.0.7.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/datanucleus-rdbms-3.0.8.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/datanucleus-core-3.0.10.jar"/>
 	<classpathentry kind="lib" path="lib/testing/mockito-all-1.9.0.jar"/>
-	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER/GWT"/>
-	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/App Engine"/>
-	<classpathentry kind="lib" path="lib/compile/datanucleus-api-jdo-3.1.0-m1.jar"/>
-	<classpathentry kind="lib" path="lib/testing/selenium-java-2.21.0.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/testing/selenium-server-2.21.0.jar"/>
+	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/testing/selenium-api-2.21.0.jar"/>
+	<classpathentry kind="lib" path="lib/testing/selenium-java-2.21.0.jar"/>
 	<classpathentry kind="lib" path="lib/testing/selenium-remote-driver-2.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/testing/guava-11.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/testing/selenium-server-2.21.0.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
