changed target for acceptance test
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@2385 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/build.xml
+++ b/build.xml
@@ -350,7 +350,7 @@
     <!-- ================================= 
           target: test-acceptance             
          ================================= -->
-    <target name="test-acceptance" depends="resolve,test-compile,_do_test_selenium_server_status" description="set up and run all acceptance tests">
+    <target name="test-acceptance" depends="resolve,java-compile,test-compile,_do_test_selenium_server_status" description="set up and run all acceptance tests">
 		<copy file="${test-src.dir}/${selenium.properties}" todir="${bin.dir}"/>
 	 
     	<junit fork="yes" haltonfailure="yes" showoutput="on">
